tests/parser/errors/invalid_array_type.ray
var invalid: [
var invalid: [int
